fix: example not fit in card

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ ul {
 
 .example {
   color: var(--nord1);
+  max-width: 100%;
 }
 
 .divider {
